# 2025_Scopus_db_builder

./: .gitignore  1_create_database.py  2_enrich_database.py  3_Lens_database.py  CHANGELOG.md  CLAUDE.md  CONFIG_README.md  MANIFEST.in  README.md  add_csv_to_database.py  analyze_citing_patents.py  analyze_data_simple.py  analyze_filtering_by_year.py  analyze_timeline.py  check_available_fields.py  check_database_coverage.py  citing_patents_analysis.json  compare_expected_vs_actual.py  config.example.json  create_database.py  patent_091-428-408-796-283_full_with_citations.json  publication_timeline_data.csv  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  test_full_patent_retrieval.py  test_reverse_citation_lookup.py  update_database_incremental.py
data/2. Scopus query/: scopus_q_2025_07.json  scopus_q_results_py.cv
data/2. Scopus query/RAW/: 20250729_211715-processed-10-of-37-scopus (12).csv  20250729_211715-processed-11-of-37-scopus (13).csv  20250729_211715-processed-13-of-37-scopus (15).csv  20250729_211715-processed-14-of-37-scopus (16).csv  20250729_211715-processed-15-of-37-scopus (17).csv  20250729_211715-processed-16-of-37-scopus (18).csv  20250729_211715-processed-17-of-37-scopus (19).csv  20250729_211715-processed-18-of-37-scopus (20).csv  20250729_211715-processed-19-of-37-scopus (21).csv  20250729_211715-processed-20-of-37-scopus (22).csv  20250729_211715-processed-21-of-37-scopus (23).csv  20250729_211715-processed-22-of-37-scopus (24).csv  20250729_211715-processed-37-of-37-scopus (9).csv  (+4 more)
data/export_1/: Scopus_query.md
docs/: CITING_PATENTS_SUMMARY.md  CONFIGURATION_GUIDE.md  DATA_FLOW_ARCHITECTURE.md  FOLDER_ORGANIZATION.md  LENS_API_GUIDE.md  MISSING_DOI_TROUBLESHOOTING.md  OPENALEX_DB_ENRICHMENT_MASTER_PLAN.md  PROJECT_STRUCTURE.md  lens_data_structure_summary.md
scopus_db/: __init__.py  api.py  cli.py  config_loader.py  data_quality_filter.py  data_quality_filter_simple.py  validator.py
scopus_db/crossref/: __init__.py  crossref_client.py
scopus_db/database/: __init__.py  creator.py
scopus_db/lens/: __init__.py  analytics.py  client.py  enricher.py  matcher.py
scopus_db/parsers/: __init__.py
scopus_db/utils/: __init__.py
scripts/: analyze_real_data.py  demo_crossref_recovery.py  investigate_keyword_mismatch.py  organize_data_folders.py
tests/: __init__.py  test_confidence_scoring.py  test_crossref_phase1.py  test_database_integrity.py  test_journal_search.py  test_real_world_phase2.py  test_real_world_sample.py  test_simple_search.py
(+1 files in other folders)
