[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "scopus-db"
version = "0.2.0"
description = "A tool for creating optimized SQLite databases from Scopus CSV exports"
readme = "README.md"
requires-python = ">=3.6"
license = {text = "MIT"}
authors = [
    {name = "Claude Code", email = "noreply@anthropic.com"},
]
maintainers = [
    {name = "Claude Code", email = "noreply@anthropic.com"},
]
keywords = ["scopus", "database", "sqlite", "research", "bibliometrics"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[project.urls]
Homepage = "https://github.com/Thisiswallz/2025_Scopus_db_builder"
Documentation = "https://github.com/Thisiswallz/2025_Scopus_db_builder#readme"
Repository = "https://github.com/Thisiswallz/2025_Scopus_db_builder"
Issues = "https://github.com/Thisiswallz/2025_Scopus_db_builder/issues"

[project.scripts]
scopus-db = "scopus_db.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
    "black>=22.0",
    "flake8>=4.0",
    "mypy>=0.9",
    "isort>=5.0",
]
viz = [
    "pandas>=1.3.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
    "wordcloud>=1.8.0",
]

[tool.black]
line-length = 88
target-version = ["py36", "py37", "py38", "py39", "py310", "py311"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3

[tool.mypy]
python_version = "3.6"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_functions = ["test_*"]
addopts = "-ra -q --strict-markers"

[tool.coverage.run]
source = ["scopus_db"]
omit = ["*/tests/*", "*/test_*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]